--- a/style.css
+++ b/style.css
@@ -290,8 +290,9 @@
         }
 
         .footer-links li {
-            margin-bottom: 12px;
-        }
+          list-style: none;
+    margin-bottom: 12px;
+}
 
         .footer-links a {
             color: var(--medium-gray);
